# fyp

./: .gitignore  DEBUGGING_README.md  README.md  ROS2_MIGRATION_README.md  behaviour_switch.sh  install_ros_noetic.sh  run_simulation_vm.sh  task_allocator_plan.md  vm_setup.sh
results/: summary.md
results/behaviors/: agent_capabilities.json  behaviors_table.md  capabilities_table.md  swarm_behaviors.json
results/integration/: challenges_table.md  integration_table.md  system_integration.json  technical_challenges.json
results/performance/: performance_metrics.json  summary_table.md
scripts/: behavior_metrics.py  generate_mock_results.py  measure_performance.sh  run_generators.sh
src/: CMakeLists.txt  README.md  package.xml  setup.py
src/butler_swarm/: agent.py
src/butler_swarm/behaviours/: avoidance_base.py  explore.py  flocking.py  formation.py  idle.py  search.py
src/butler_swarm/utils/: communication.py  task_allocator.py  visualization.py
src/config/: default_swarm.rviz
src/launch/: butler_swarm.launch  spawn_agent.launch  world.launch
src/models/: butler_agent.urdf.xacro
src/nodes/: agent_node.py  spawn_agents.py  swarm_controller.py
src/worlds/: castle_arena.world  empty_arena.world
