<?xml version="1.0"?>
<package format="2">
    <name>butler_swarm</name>
    <version>0.1.0</version>
    <description>Swarm intelligence implementation for Project Butler</description>
    <maintainer email="ta24aco@herts.ac.uk">Thomas Anderson</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>gazebo_ros</depend>

    <exec_depend>python-numpy</exec_depend>
</package>